OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance_Detail__c/Dealer_Insurance_Detail__c.object-meta.xml
<CustomObject>
    <label>Dealer Insurance Detail</label>
    <nameField>
        <displayFormat>DID-{00000}</displayFormat>
        <label>Dealer Insurance Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Insurance Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>