OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance_Detail__c/fields/Dealer_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Insurance</label>
    <referenceTo>Dealer_Insurance__c</referenceTo>
    <relationshipLabel>Dealer Insurance Details</relationshipLabel>
    <relationshipName>Dealer_Insurance_Details</relationshipName>
    <type>Lookup</type>
</CustomField>