OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance_Detail__c/fields/Insurance_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier__c</fullName>
    <label>Insurance Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>